--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -31,7 +31,7 @@ body{
 }
 .cabecalho__menu__link {
     font-family: var(--font-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--cor-terciaria);
     text-decoration: none;
@@ -42,23 +42,24 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 .apresentacao .imgem{
     width: 50%;
     height: auto;
 } 
 .apresentacao__conteudo{
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 .apresentacao__conteudo__titulo {
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--font-primaria);
 }
 .apresentacao__conteudo_texto{
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--font-secundaria);
 }
 .apresentacao__link{
@@ -71,25 +72,25 @@ body{
 
 .title-prominence {
     color: var(--cor-terciaria);
-}
+} 
 
 .apresentacao__links__subtitulo{
     font-family: var(--font-primaria);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
-.apresentacao__links_link{
+.apresentacao__links_navegacao{
     /* background-color: #22D4FD; */
     display: flex;
     justify-content: center;
     grid-gap: 16px;
     border: 2px solid var(--cor-terciaria);
-    width: 378px;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 1.5rem;
     padding: 21.5px 0;
     text-decoration: none;
     color: var(--cor-secundaria);
@@ -97,6 +98,10 @@ body{
 }
 apresentacao__links_link:hover{
     background-color: var(--cor-hover);
+}
+
+.apresentacao__imgem {
+    width: 50%;
 }
 
 .rodape {
@@ -107,4 +112,21 @@ apresentacao__links_link:hover{
     font-family: var(--font-secundaria);
     font-size: 24px;
     font-weight: 400;
+}
+
+@media (max-width: 1200ox) {
+    .cabecalho {
+        padding: 10%;
+    }
+    .cabecalho__menu {
+        justify-content: center;
+    }
+    .apresentacao {
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+    .apresentacao__conteudo {
+        width: auto;
+    }
+
 }
