--- a/Front_End_Rocketseat/Estudos/memoteca/src/app/component/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/Front_End_Rocketseat/Estudos/memoteca/src/app/component/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -9,14 +9,16 @@
       class="input"
       id="pensamento"
       name="pensamento"
-      placeholder="Digite o pensamento">
+      placeholder="Digite o pensamento"
+      [(ngModel)]="pensamento.conteudo">
     <label for="autoria">Autoria ou fonte </label>
     <input
       type="text"
       class="input"
       id="autoria"
       name="autoria"
-      placeholder="Digite o autoria ou fonte">
+      placeholder="Digite o autoria ou fonte"
+      [(ngModel)]="pensamento.autoria"> >
     <label for="modelo">Selecione o modelo do card:</label>
     <div class="container-radio">
       <div class="radio-modelo">
@@ -25,7 +27,8 @@
             type="radio"
             id="modelo1"
             value="modelo1"
-            name="modelo-card">
+            name="modelo-card"
+            [(ngModel)]="pensamento.modelo">
           <div class="custom-radio">
             <span></span>
           </div>
@@ -45,7 +48,8 @@
             type="radio"
             id="modelo2"
             value="modelo2"
-            name="modelo-card">
+            name="modelo-card"
+            [(ngModel)]="pensamento.modelo">
           <div class="custom-radio">
             <span></span>
           </div>
@@ -66,7 +70,8 @@
             type="radio"
             id="modelo3"
             value="modelo3"
-            name="modelo-card">
+            name="modelo-card"
+            [(ngModel)]="pensamento.modelo">
           <div class="custom-radio">
             <span></span>
           </div>
