--- a/Front_End_Rocketseat/Treine/style.css
+++ b/Front_End_Rocketseat/Treine/style.css
@@ -69,8 +69,27 @@ section p {
 }
 
 button {
+  color: white;
   text-transform: uppercase;
   font-family: 'Open Sans', sans-serif;
+
+  background: #69B99D;
+  border: 0;
+  padding: 14px 32px 15px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+
+  border-radius: 4px;
+
+  cursor: pointer;
+
+}
+
+button:hover {
+  background: #4ea788;
 }
 
 footer {
